<resources>
    <string name="app_name">Visualize</string>

    <!-- TODO (4) Add string for Settings -->

    <!-- - - - - - - - - - - - - - - -
          - Used by Preferences  -
          - - - - - - - - - - - - - - - -->
    
    <string name="pref_color_key" translatable="false">color</string>
    
    <string name="pref_show_bass_label">Show Bass</string>
    <string name="pref_show_bass_key" translatable="false">show_bass</string>

    <string name="pref_show_treble_label">Show Treble</string>
    <string name="pref_show_treble_key" translatable="false">show_treble</string>

    <string name="pref_show_mid_label">Show Mid</string>
    <string name="pref_show_mid_key" translatable="false">show_mid</string>

    <!-- it makes changes in the future a lot easier -->
    <string name="pref_shown_true">Shown</string>
    <string name="pref_shown_false">Hidden</string>

    <!-- Value in SharedPreferences for red color option -->
    <string name="pref_color_red_value" translatable="false">red</string>

    <!-- Value in SharedPreferences for blue color option -->
    <string name="pref_color_blue_value" translatable="false">blue</string>

    <!-- Value in SharedPreferences for green color option -->
    <string name="pref_color_green_value" translatable="false">green</string>

    <string name="pref_size_default">1</string>
    <string name="pref_size_key" translatable="false">size</string>
    <string name="pref_size_label">Size Multiplier</string>

</resources>
