<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <CheckBoxPreference
        android:defaultValue="@bool/pref_show_bass_default"
        android:key="@string/pref_show_bass_key"
        android:summaryOff="@string/pref_shown_false"
        android:summaryOn="@string/pref_shown_true"
        android:title="@string/pref_show_bass_label"/>

    <CheckBoxPreference
        android:defaultValue="@bool/pref_show_treble_default"
        android:key="@string/pref_show_treble_key"
        android:summaryOff="@string/pref_shown_false"
        android:summaryOn="@string/pref_shown_true"
        android:title="@string/pref_show_treble_label"/>

    <CheckBoxPreference
        android:defaultValue="@bool/pref_show_mid_default"
        android:key="@string/pref_show_mid_key"
        android:summaryOff="@string/pref_shown_false"
        android:summaryOn="@string/pref_shown_true"
        android:title="@string/pref_show_mid_label"/>

    <EditTextPreference
        android:defaultValue="@string/pref_size_default"
        android:key="@string/pref_size_key"
        android:title="@string/pref_size_label"/>

    <ListPreference
        android:defaultValue="Red"
        android:entries="@array/pref_color_option_labels"
        android:entryValues="@array/pref_color_option_values"
        android:key="@string/pref_color_key"
        android:title="Color"/>

</PreferenceScreen>